--- a/golang/persistence/persistence_server/config.json
+++ b/golang/persistence/persistence_server/config.json
@@ -1,26 +1,26 @@
 {
-  "Id": "91c7189f-9106-423d-b72b-f62f7470136d",
+  "Id": "e60206c1-f1d8-45b4-8b25-49177c1b0e8b",
   "Name": "persistence.PersistenceService",
   "Path": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/persistence/persistence_server/persistence_server",
-  "Port": 10035,
+  "Port": 10018,
   "Proto": "/home/dave/Documents/Project/src/github.com/globulario/services/proto/persistence.proto",
-  "Proxy": 10036,
+  "Proxy": 10014,
   "Protocol": "grpc",
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "Domain": "localhost",
+  "Domain": "hub.globular.io",
   "Description": "",
   "Keywords": [],
   "Repositories": [],
   "Discoveries": [],
-  "CertAuthorityTrust": "",
-  "CertFile": "",
-  "KeyFile": "",
-  "TLS": false,
+  "CertAuthorityTrust": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/ca.crt",
+  "CertFile": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/server.crt",
+  "KeyFile": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/server.pem",
+  "TLS": true,
   "Version": "0.0.1",
   "PublisherId": "globulario",
   "KeepUpToDate": false,
   "KeepAlive": false,
   "Permissions": [],
-  "Connections": null
+  "Connections": {}
 }
