=add monitoring info

--- a/golang/event/event_server/config.json
+++ b/golang/event/event_server/config.json
@@ -1,29 +1,29 @@
 {
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "CertAuthorityTrust": "",
-  "CertFile": "",
+  "CertAuthorityTrust": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/ca.crt",
+  "CertFile": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/server.crt",
   "Description": "",
   "Discoveries": [],
-  "Domain": "localhost",
+  "Domain": "hub.globular.io",
   "Id": "a6bfda7f-406f-419c-898a-1ab65bccf36a",
   "KeepAlive": false,
   "KeepUpToDate": false,
-  "KeyFile": "",
+  "KeyFile": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/server.pem",
   "Keywords": [],
   "Name": "event.EventService",
   "Path": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/event/event_server/event_server",
   "Permissions": [],
-  "Port": 10020,
-  "Process": 27805,
+  "Port": 10015,
+  "Process": 84002,
   "Proto": "/home/dave/Documents/Project/src/github.com/globulario/services/proto/event.proto",
   "Protocol": "grpc",
-  "Proxy": 10014,
-  "ProxyProcess": 27815,
+  "Proxy": 10020,
+  "ProxyProcess": 84013,
   "PublisherId": "globulario",
   "Repositories": [],
   "State": "running",
-  "TLS": false,
+  "TLS": true,
   "Version": "0.0.1",
   "configPath": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/event/event_server/config.json"
 }
