--- a/golang/persistence/persistence_server/config.json
+++ b/golang/persistence/persistence_server/config.json
@@ -1,30 +1,30 @@
 {
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "CertAuthorityTrust": "",
-  "CertFile": "",
+  "CertAuthorityTrust": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/ca.crt",
+  "CertFile": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/server.crt",
   "Connections": {},
   "Description": "",
   "Discoveries": [],
-  "Domain": "localhost",
+  "Domain": "hub.globular.io",
   "Id": "e60206c1-f1d8-45b4-8b25-49177c1b0e8b",
   "KeepAlive": false,
   "KeepUpToDate": false,
-  "KeyFile": "",
+  "KeyFile": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/server.pem",
   "Keywords": [],
   "Name": "persistence.PersistenceService",
   "Path": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/persistence/persistence_server/persistence_server",
   "Permissions": [],
-  "Port": 10017,
-  "Process": 27823,
+  "Port": 10025,
+  "Process": 84052,
   "Proto": "/home/dave/Documents/Project/src/github.com/globulario/services/proto/persistence.proto",
   "Protocol": "grpc",
-  "Proxy": 10019,
-  "ProxyProcess": 27831,
+  "Proxy": 10013,
+  "ProxyProcess": 84067,
   "PublisherId": "globulario",
   "Repositories": [],
   "State": "running",
-  "TLS": false,
+  "TLS": true,
   "Version": "0.0.1",
   "configPath": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/persistence/persistence_server/config.json"
 }
