--- a/golang/mail/mail_server/config.json
+++ b/golang/mail/mail_server/config.json
@@ -21,17 +21,17 @@
   "Path": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/mail/mail_server/mail_server",
   "Permissions": [],
   "Port": 10021,
-  "Process": 789319,
+  "Process": -1,
   "Proto": "/home/dave/Documents/Project/src/github.com/globulario/services/proto/mail.proto",
   "Protocol": "grpc",
   "Proxy": 10028,
-  "ProxyProcess": 789329,
+  "ProxyProcess": -1,
   "PublisherId": "globulario",
   "Repositories": [],
   "SMTPS_Port": 465,
   "SMTP_ALT_Port": 587,
   "SMTP_Port": 25,
-  "State": "running",
+  "State": "stopped",
   "TLS": true,
   "Version": "0.0.1",
   "configPath": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/mail/mail_server/config.json"
