--- a/golang/monitoring/monitoring_server/config.json
+++ b/golang/monitoring/monitoring_server/config.json
@@ -23,14 +23,14 @@
   "Path": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/monitoring/monitoring_server/monitoring_server",
   "Permissions": [],
   "Port": 10020,
-  "Process": 789302,
+  "Process": -1,
   "Proto": "/home/dave/Documents/Project/src/github.com/globulario/services/proto/monitoring.proto",
   "Protocol": "grpc",
   "Proxy": 10023,
-  "ProxyProcess": 789308,
+  "ProxyProcess": -1,
   "PublisherId": "globulario",
   "Repositories": [],
-  "State": "running",
+  "State": "stopped",
   "TLS": true,
   "Version": "0.0.1",
   "configPath": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/monitoring/monitoring_server/config.json"
