--- a/golang/search/search_server/config.json
+++ b/golang/search/search_server/config.json
@@ -15,15 +15,15 @@
   "Path": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/search/search_server/search_server",
   "Permissions": [],
   "Port": 10019,
-  "Process": 789354,
+  "Process": -1,
   "Proto": "/home/dave/Documents/Project/src/github.com/globulario/services/proto/search.proto",
   "Protocol": "grpc",
   "Proxy": 10017,
-  "ProxyProcess": 789361,
+  "ProxyProcess": -1,
   "PublisherId": "globulario",
   "Repositories": [],
   "Root": "",
-  "State": "running",
+  "State": "stopped",
   "TLS": true,
   "Version": "0.0.1",
   "configPath": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/search/search_server/config.json"
