--- a/golang/event/event_server/config.json
+++ b/golang/event/event_server/config.json
@@ -15,14 +15,14 @@
   "Path": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/event/event_server/event_server",
   "Permissions": [],
   "Port": 10024,
-  "Process": 789266,
+  "Process": -1,
   "Proto": "/home/dave/Documents/Project/src/github.com/globulario/services/proto/event.proto",
   "Protocol": "grpc",
   "Proxy": 10026,
-  "ProxyProcess": 789281,
+  "ProxyProcess": -1,
   "PublisherId": "globulario",
   "Repositories": [],
-  "State": "running",
+  "State": "stopped",
   "TLS": true,
   "Version": "0.0.1",
   "configPath": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/event/event_server/config.json"
