--- a/golang/persistence/persistence_server/config.json
+++ b/golang/persistence/persistence_server/config.json
@@ -16,14 +16,14 @@
   "Path": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/persistence/persistence_server/persistence_server",
   "Permissions": [],
   "Port": 10013,
-  "Process": 789288,
+  "Process": -1,
   "Proto": "/home/dave/Documents/Project/src/github.com/globulario/services/proto/persistence.proto",
   "Protocol": "grpc",
   "Proxy": 10018,
-  "ProxyProcess": 789295,
+  "ProxyProcess": -1,
   "PublisherId": "globulario",
   "Repositories": [],
-  "State": "running",
+  "State": "stopped",
   "TLS": true,
   "Version": "0.0.1",
   "configPath": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/persistence/persistence_server/config.json"
