--- a/golang/event/event_server/config.json
+++ b/golang/event/event_server/config.json
@@ -1,29 +1,29 @@
 {
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "CertAuthorityTrust": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/ca.crt",
-  "CertFile": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/server.crt",
+  "CertAuthorityTrust": "",
+  "CertFile": "",
   "Description": "",
   "Discoveries": [],
-  "Domain": "hub.globular.io",
-  "Id": "a6bfda7f-406f-419c-898a-1ab65bccf36a",
+  "Domain": "localhost",
+  "Id": "7b41eb52-3291-46c6-9840-5a3acc0a13a4",
   "KeepAlive": false,
   "KeepUpToDate": false,
-  "KeyFile": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/server.pem",
+  "KeyFile": "",
   "Keywords": [],
   "Name": "event.EventService",
-  "Path": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/event/event_server/event_server",
+  "Path": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/event/event_server/event_server.exe",
   "Permissions": [],
-  "Port": 10019,
-  "Process": 159857,
-  "Proto": "/home/dave/Documents/Project/src/github.com/globulario/services/proto/event.proto",
+  "Port": 10030,
+  "Process": -1,
+  "Proto": "C:/Users/mm006819/go/src/github.com/globulario/services/proto/event.proto",
   "Protocol": "grpc",
-  "Proxy": 10013,
-  "ProxyProcess": 159865,
+  "Proxy": 10019,
+  "ProxyProcess": -1,
   "PublisherId": "globulario",
   "Repositories": [],
-  "State": "running",
-  "TLS": true,
+  "State": "stopped",
+  "TLS": false,
   "Version": "0.0.1",
-  "configPath": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/event/event_server/config.json"
+  "configPath": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/event/event_server/config.json"
 }
