--- a/golang/persistence/persistence_server/config.json
+++ b/golang/persistence/persistence_server/config.json
@@ -1,26 +1,30 @@
 {
-  "Id": "e60206c1-f1d8-45b4-8b25-49177c1b0e8b",
-  "Name": "persistence.PersistenceService",
-  "Path": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/persistence/persistence_server/persistence_server",
-  "Port": 10018,
-  "Proto": "/home/dave/Documents/Project/src/github.com/globulario/services/proto/persistence.proto",
-  "Proxy": 10014,
-  "Protocol": "grpc",
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "Domain": "hub.globular.io",
+  "CertAuthorityTrust": "",
+  "CertFile": "",
+  "Connections": null,
   "Description": "",
-  "Keywords": [],
-  "Repositories": [],
   "Discoveries": [],
-  "CertAuthorityTrust": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/ca.crt",
-  "CertFile": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/server.crt",
-  "KeyFile": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/server.pem",
-  "TLS": true,
-  "Version": "0.0.1",
-  "PublisherId": "globulario",
-  "KeepUpToDate": false,
+  "Domain": "localhost",
+  "Id": "c7140ca9-131b-4fc1-a16e-3b3873579bbf",
   "KeepAlive": false,
+  "KeepUpToDate": false,
+  "KeyFile": "",
+  "Keywords": [],
+  "Name": "persistence.PersistenceService",
+  "Path": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/persistence/persistence_server/persistence_server.exe",
   "Permissions": [],
-  "Connections": {}
+  "Port": 10023,
+  "Process": -1,
+  "Proto": "C:/Users/mm006819/go/src/github.com/globulario/services/proto/persistence.proto",
+  "Protocol": "grpc",
+  "Proxy": 10026,
+  "ProxyProcess": -1,
+  "PublisherId": "globulario",
+  "Repositories": [],
+  "State": "stopped",
+  "TLS": false,
+  "Version": "0.0.1",
+  "configPath": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/persistence/persistence_server/config.json"
 }
