--- a/golang/mail/mail_server/config.json
+++ b/golang/mail/mail_server/config.json
@@ -1,38 +1,46 @@
 {
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "CertAuthorityTrust": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/ca.crt",
-  "CertFile": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/server.crt",
-  "Connections": {},
+  "CertAuthorityTrust": "",
+  "CertFile": "",
+  "Connections": {
+    "safran_Mail": {
+      "Host": "mon-print-01",
+      "Id": "safran_Mail",
+      "Password": "Dowty123",
+      "Port": 25,
+      "User": "mrmfct037@UD6.UF6"
+    }
+  },
   "DbIpV4": "0.0.0.0:27017",
   "Description": "",
   "Discoveries": [],
-  "Domain": "hub.globular.io",
+  "Domain": "localhost",
   "IMAPS_Port": 993,
   "IMAP_ALT_Port": 1043,
   "IMAP_Port": 143,
-  "Id": "cfd828c6-90de-40eb-8bcf-2961390ebea5",
+  "Id": "2b3ae24d-943a-4749-a892-49c5b110d4a2",
   "KeepAlive": false,
   "KeepUpToDate": false,
-  "KeyFile": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/server.pem",
+  "KeyFile": "",
   "Keywords": [],
   "Name": "mail.MailService",
   "Password": "adminadmin",
-  "Path": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/mail/mail_server/mail_server",
+  "Path": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/mail/mail_server/mail_server.exe",
   "Permissions": [],
-  "Port": 10014,
-  "Process": 159887,
-  "Proto": "/home/dave/Documents/Project/src/github.com/globulario/services/proto/mail.proto",
+  "Port": 10022,
+  "Process": -1,
+  "Proto": "C:/Users/mm006819/go/src/github.com/globulario/services/proto/mail.proto",
   "Protocol": "grpc",
-  "Proxy": 10023,
-  "ProxyProcess": 159895,
+  "Proxy": 10028,
+  "ProxyProcess": -1,
   "PublisherId": "globulario",
   "Repositories": [],
   "SMTPS_Port": 465,
   "SMTP_ALT_Port": 587,
   "SMTP_Port": 25,
-  "State": "running",
-  "TLS": true,
+  "State": "stopped",
+  "TLS": false,
   "Version": "0.0.1",
-  "configPath": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/mail/mail_server/config.json"
+  "configPath": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/mail/mail_server/config.json"
 }
