=merge from laptop

--- a/golang/event/event_server/config.json
+++ b/golang/event/event_server/config.json
@@ -1,29 +1,29 @@
 {
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "CertAuthorityTrust": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/ca.crt",
-  "CertFile": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/server.crt",
+  "CertAuthorityTrust": "",
+  "CertFile": "",
   "Description": "",
   "Discoveries": [],
-  "Domain": "hub.globular.io",
+  "Domain": "localhost",
   "Id": "a6bfda7f-406f-419c-898a-1ab65bccf36a",
   "KeepAlive": false,
   "KeepUpToDate": false,
-  "KeyFile": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/server.pem",
+  "KeyFile": "",
   "Keywords": [],
   "Name": "event.EventService",
   "Path": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/event/event_server/event_server",
   "Permissions": [],
   "Port": 10024,
-  "Process": -1,
+  "Process": 142968,
   "Proto": "/home/dave/Documents/Project/src/github.com/globulario/services/proto/event.proto",
   "Protocol": "grpc",
-  "Proxy": 10026,
-  "ProxyProcess": -1,
+  "Proxy": 10014,
+  "ProxyProcess": 142975,
   "PublisherId": "globulario",
   "Repositories": [],
-  "State": "stopped",
-  "TLS": true,
+  "State": "running",
+  "TLS": false,
   "Version": "0.0.1",
   "configPath": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/event/event_server/config.json"
 }
