--- a/golang/mail/mail_server/config.json
+++ b/golang/mail/mail_server/config.json
@@ -1,38 +1,38 @@
 {
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "CertAuthorityTrust": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/ca.crt",
-  "CertFile": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/server.crt",
+  "CertAuthorityTrust": "",
+  "CertFile": "",
   "Connections": {},
   "DbIpV4": "0.0.0.0:27017",
   "Description": "",
   "Discoveries": [],
-  "Domain": "hub.globular.io",
+  "Domain": "localhost",
   "IMAPS_Port": 993,
   "IMAP_ALT_Port": 1043,
   "IMAP_Port": 143,
   "Id": "cfd828c6-90de-40eb-8bcf-2961390ebea5",
   "KeepAlive": false,
   "KeepUpToDate": false,
-  "KeyFile": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/server.pem",
+  "KeyFile": "",
   "Keywords": [],
   "Name": "mail.MailService",
   "Password": "adminadmin",
   "Path": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/mail/mail_server/mail_server",
   "Permissions": [],
-  "Port": 10021,
-  "Process": -1,
+  "Port": 10020,
+  "Process": 142920,
   "Proto": "/home/dave/Documents/Project/src/github.com/globulario/services/proto/mail.proto",
   "Protocol": "grpc",
-  "Proxy": 10028,
-  "ProxyProcess": -1,
+  "Proxy": 10023,
+  "ProxyProcess": 142928,
   "PublisherId": "globulario",
   "Repositories": [],
   "SMTPS_Port": 465,
   "SMTP_ALT_Port": 587,
   "SMTP_Port": 25,
-  "State": "stopped",
-  "TLS": true,
+  "State": "running",
+  "TLS": false,
   "Version": "0.0.1",
   "configPath": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/mail/mail_server/config.json"
 }
