--- a/golang/file/file_server/config.json
+++ b/golang/file/file_server/config.json
@@ -1,15 +1,15 @@
 {
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "CertAuthorityTrust": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/ca.crt",
-  "CertFile": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/server.crt",
+  "CertAuthorityTrust": "",
+  "CertFile": "",
   "Description": "",
   "Discoveries": [],
-  "Domain": "hub.globular.io",
+  "Domain": "localhost",
   "Id": "e2302683-7aa8-4421-9d7c-79e6df21e6cf",
   "KeepAlive": false,
   "KeepUpToDate": false,
-  "KeyFile": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/server.pem",
+  "KeyFile": "",
   "Keywords": [],
   "Name": "file.FileService",
   "Path": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/file/file_server/file_server",
@@ -123,17 +123,17 @@
       ]
     }
   ],
-  "Port": 10027,
-  "Process": -1,
+  "Port": 10021,
+  "Process": 142986,
   "Proto": "/home/dave/Documents/Project/src/github.com/globulario/services/proto/file.proto",
   "Protocol": "grpc",
-  "Proxy": 10025,
-  "ProxyProcess": -1,
+  "Proxy": 10013,
+  "ProxyProcess": 142994,
   "PublisherId": "globulario",
   "Repositories": [],
   "Root": "/home/dave/Documents/Project/src/github.com/globulario/Globular/webroot",
-  "State": "stopped",
-  "TLS": true,
+  "State": "running",
+  "TLS": false,
   "Version": "0.0.1",
   "configPath": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/file/file_server/config.json"
 }
