--- a/golang/monitoring/monitoring_server/config.json
+++ b/golang/monitoring/monitoring_server/config.json
@@ -1,8 +1,8 @@
 {
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "CertAuthorityTrust": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/ca.crt",
-  "CertFile": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/server.crt",
+  "CertAuthorityTrust": "",
+  "CertFile": "",
   "Connections": {
     "dashboard_connection": {
       "Host": "localhost",
@@ -13,25 +13,25 @@
   },
   "Description": "",
   "Discoveries": [],
-  "Domain": "hub.globular.io",
+  "Domain": "localhost",
   "Id": "4c4dd5ec-1586-454f-bcf1-54f52e34a1ff",
   "KeepAlive": false,
   "KeepUpToDate": false,
-  "KeyFile": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/server.pem",
+  "KeyFile": "",
   "Keywords": [],
   "Name": "monitoring.MonitoringService",
   "Path": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/monitoring/monitoring_server/monitoring_server",
   "Permissions": [],
-  "Port": 10020,
-  "Process": -1,
+  "Port": 10018,
+  "Process": 143002,
   "Proto": "/home/dave/Documents/Project/src/github.com/globulario/services/proto/monitoring.proto",
   "Protocol": "grpc",
-  "Proxy": 10023,
-  "ProxyProcess": -1,
+  "Proxy": 10019,
+  "ProxyProcess": 143009,
   "PublisherId": "globulario",
   "Repositories": [],
-  "State": "stopped",
-  "TLS": true,
+  "State": "running",
+  "TLS": false,
   "Version": "0.0.1",
   "configPath": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/monitoring/monitoring_server/config.json"
 }
