--- a/golang/persistence/persistence_server/config.json
+++ b/golang/persistence/persistence_server/config.json
@@ -1,30 +1,30 @@
 {
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "CertAuthorityTrust": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/ca.crt",
-  "CertFile": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/server.crt",
+  "CertAuthorityTrust": "",
+  "CertFile": "",
   "Connections": {},
   "Description": "",
   "Discoveries": [],
-  "Domain": "hub.globular.io",
+  "Domain": "localhost",
   "Id": "e60206c1-f1d8-45b4-8b25-49177c1b0e8b",
   "KeepAlive": false,
   "KeepUpToDate": false,
-  "KeyFile": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/server.pem",
+  "KeyFile": "",
   "Keywords": [],
   "Name": "persistence.PersistenceService",
   "Path": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/persistence/persistence_server/persistence_server",
   "Permissions": [],
-  "Port": 10013,
-  "Process": -1,
+  "Port": 10026,
+  "Process": 142934,
   "Proto": "/home/dave/Documents/Project/src/github.com/globulario/services/proto/persistence.proto",
   "Protocol": "grpc",
-  "Proxy": 10018,
-  "ProxyProcess": -1,
+  "Proxy": 10016,
+  "ProxyProcess": 142942,
   "PublisherId": "globulario",
   "Repositories": [],
-  "State": "stopped",
-  "TLS": true,
+  "State": "running",
+  "TLS": false,
   "Version": "0.0.1",
   "configPath": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/persistence/persistence_server/config.json"
 }
