--- a/golang/search/search_server/config.json
+++ b/golang/search/search_server/config.json
@@ -1,30 +1,30 @@
 {
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "CertAuthorityTrust": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/ca.crt",
-  "CertFile": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/server.crt",
+  "CertAuthorityTrust": "",
+  "CertFile": "",
   "Description": "",
   "Discoveries": [],
-  "Domain": "hub.globular.io",
+  "Domain": "localhost",
   "Id": "02d6c3ca-c0a0-4068-86ed-a275f703f0dc",
   "KeepAlive": false,
   "KeepUpToDate": false,
-  "KeyFile": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/server.pem",
+  "KeyFile": "",
   "Keywords": [],
   "Name": "echo.SearchService",
   "Path": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/search/search_server/search_server",
   "Permissions": [],
-  "Port": 10019,
-  "Process": -1,
+  "Port": 10017,
+  "Process": 142953,
   "Proto": "/home/dave/Documents/Project/src/github.com/globulario/services/proto/search.proto",
   "Protocol": "grpc",
-  "Proxy": 10017,
-  "ProxyProcess": -1,
+  "Proxy": 10022,
+  "ProxyProcess": 142959,
   "PublisherId": "globulario",
   "Repositories": [],
   "Root": "",
-  "State": "stopped",
-  "TLS": true,
+  "State": "running",
+  "TLS": false,
   "Version": "0.0.1",
   "configPath": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/search/search_server/config.json"
 }
