--- a/cpp/spc/spc_server/release/config.json
+++ b/cpp/spc/spc_server/release/config.json
@@ -13,15 +13,15 @@
   "Keywords": null,
   "Name": "spc.SpcService",
   "Path": "C:/Users/mm006819/go/src/github.com/globulario/services/cpp/spc/spc_server/release/spc_server.exe",
-  "Port": 10014,
-  "Process": -1,
+  "Port": 10030,
+  "Process": 16872,
   "Proto": "C:/Users/mm006819/go/src/github.com/globulario/services/proto/spc.proto",
   "Protocol": "grpc",
-  "Proxy": 10033,
-  "ProxyProcess": -1,
+  "Proxy": 10022,
+  "ProxyProcess": 12924,
   "PublisherId": "localhost",
   "Repositories": null,
-  "State": "stopped",
+  "State": "running",
   "TLS": false,
   "Version": "0.0.1",
   "configPath": "C:/Users/mm006819/go/src/github.com/globulario/services/cpp/spc/spc_server/release/config.json"
