--- a/golang/echo/echo_server/config.json
+++ b/golang/echo/echo_server/config.json
@@ -19,15 +19,15 @@
   "Name": "echo.EchoService",
   "Path": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/echo/echo_server/echo_server.exe",
   "Permissions": [],
-  "Port": 10013,
-  "Process": -1,
+  "Port": 10023,
+  "Process": 13040,
   "Proto": "C:/Users/mm006819/go/src/github.com/globulario/services/proto/echo.proto",
   "Protocol": "grpc",
-  "Proxy": 10021,
-  "ProxyProcess": -1,
+  "Proxy": 10013,
+  "ProxyProcess": 12440,
   "PublisherId": "globulario",
   "Repositories": [],
-  "State": "stopped",
+  "State": "running",
   "TLS": false,
   "Version": "0.0.1",
   "configPath": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/echo/echo_server/config.json"
