--- a/golang/sql/sql_server/config.json
+++ b/golang/sql/sql_server/config.json
@@ -47,7 +47,7 @@
     "operation": {
       "Charset": "utf8",
       "Driver": "odbc",
-      "Host": "mon-sql-v02",
+      "Host": "mon-sql-d01",
       "Id": "operation",
       "Name": "Operation",
       "Password": "hyn4AdgL3xJajG4Z",
@@ -66,15 +66,15 @@
   "Name": "sql.SqlService",
   "Path": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/sql/sql_server/sql_server.exe",
   "Permissions": [],
-  "Port": 10031,
-  "Process": -1,
+  "Port": 10016,
+  "Process": 6660,
   "Proto": "C:/Users/mm006819/go/src/github.com/globulario/services/proto/sql.proto",
   "Protocol": "grpc",
-  "Proxy": 10015,
-  "ProxyProcess": -1,
+  "Proxy": 10018,
+  "ProxyProcess": 17992,
   "PublisherId": "globulario",
   "Repositories": [],
-  "State": "stopped",
+  "State": "running",
   "TLS": false,
   "Version": "0.0.1",
   "configPath": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/sql/sql_server/config.json"
