--- a/golang/file/file_server/config.json
+++ b/golang/file/file_server/config.json
@@ -1,7 +1,6 @@
 {
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-<<<<<<< HEAD
   "CertAuthorityTrust": "",
   "CertFile": "",
   "Description": "",
@@ -14,20 +13,6 @@
   "Keywords": [],
   "Name": "file.FileService",
   "Path": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/file/file_server/file_server.exe",
-=======
-  "CertAuthorityTrust": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/ca.crt",
-  "CertFile": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/server.crt",
-  "Description": "",
-  "Discoveries": [],
-  "Domain": "hub.globular.io",
-  "Id": "e2302683-7aa8-4421-9d7c-79e6df21e6cf",
-  "KeepAlive": false,
-  "KeepUpToDate": false,
-  "KeyFile": "/home/dave/Documents/Project/src/github.com/globulario/Globular/config/tls/server.pem",
-  "Keywords": [],
-  "Name": "file.FileService",
-  "Path": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/file/file_server/file_server",
->>>>>>> a9bc0bff0c79db6ce289c681ba83fcd640d13bfe
   "Permissions": [
     {
       "action": "/file.FileService/ReadDir",
@@ -138,33 +123,17 @@
       ]
     }
   ],
-<<<<<<< HEAD
-  "Port": 10018,
-  "Process": -1,
+  "Port": 10029,
+  "Process": 8912,
   "Proto": "C:/Users/mm006819/go/src/github.com/globulario/services/proto/file.proto",
   "Protocol": "grpc",
   "Proxy": 10020,
-  "ProxyProcess": -1,
+  "ProxyProcess": 17676,
   "PublisherId": "globulario",
   "Repositories": [],
   "Root": "C:\\Users\\mm006819\\go\\src\\github.com\\globulario\\Globular\\webroot",
-  "State": "stopped",
+  "State": "running",
   "TLS": false,
   "Version": "0.0.1",
   "configPath": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/file/file_server/config.json"
-=======
-  "Port": 10027,
-  "Process": -1,
-  "Proto": "/home/dave/Documents/Project/src/github.com/globulario/services/proto/file.proto",
-  "Protocol": "grpc",
-  "Proxy": 10025,
-  "ProxyProcess": -1,
-  "PublisherId": "globulario",
-  "Repositories": [],
-  "Root": "/home/dave/Documents/Project/src/github.com/globulario/Globular/webroot",
-  "State": "stopped",
-  "TLS": true,
-  "Version": "0.0.1",
-  "configPath": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/file/file_server/config.json"
->>>>>>> a9bc0bff0c79db6ce289c681ba83fcd640d13bfe
 }
