--- a/golang/ldap/ldap_server/config.json
+++ b/golang/ldap/ldap_server/config.json
@@ -23,15 +23,15 @@
   "Name": "ldap.LdapService",
   "Path": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/ldap/ldap_server/ldap_server.exe",
   "Permissions": [],
-  "Port": 10024,
-  "Process": -1,
+  "Port": 10019,
+  "Process": 14976,
   "Proto": "C:/Users/mm006819/go/src/github.com/globulario/services/proto/ldap.proto",
   "Protocol": "grpc",
-  "Proxy": 10017,
-  "ProxyProcess": -1,
+  "Proxy": 10021,
+  "ProxyProcess": 18160,
   "PublisherId": "globulario",
   "Repositories": [],
-  "State": "stopped",
+  "State": "running",
   "TLS": false,
   "Version": "0.0.1",
   "configPath": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/ldap/ldap_server/config.json"
