fix ressource type

--- a/golang/event/event_server/config.json
+++ b/golang/event/event_server/config.json
@@ -1,25 +1,29 @@
 {
-  "Id": "dfb14d9c-cc6c-4bda-ab2c-d56e62bc1115",
-  "Name": "event.EventService",
-  "Path": "/home/dave/go/src/github.com/globulario/services/golang/event/event_server/event_server",
-  "Proto": "/home/dave/go/src/github.com/globulario/services/proto/event.proto",
-  "Port": 10050,
-  "Proxy": 10051,
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "Protocol": "grpc",
-  "Domain": "localhost",
-  "Description": "",
-  "Keywords": [],
-  "Repositories": [],
-  "Discoveries": [],
-  "CertFile": "",
-  "KeyFile": "",
   "CertAuthorityTrust": "",
+  "CertFile": "",
+  "Description": "",
+  "Discoveries": [],
+  "Domain": "localhost",
+  "Id": "6d540754-11bf-45e0-aaf5-d72da845ff71",
+  "KeepAlive": false,
+  "KeepUpToDate": false,
+  "KeyFile": "",
+  "Keywords": [],
+  "Name": "event.EventService",
+  "Path": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/event/event_server/event_server.exe",
+  "Permissions": [],
+  "Port": 10016,
+  "Process": 4104,
+  "Proto": "C:/Users/mm006819/go/src/github.com/globulario/services/proto/event.proto",
+  "Protocol": "grpc",
+  "Proxy": 10020,
+  "ProxyProcess": 11748,
+  "PublisherId": "globulario",
+  "Repositories": [],
+  "State": "running",
   "TLS": false,
   "Version": "0.0.1",
-  "PublisherId": "globulario",
-  "KeepUpToDate": false,
-  "KeepAlive": false,
-  "Permissions": []
+  "configPath": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/event/event_server/config.json"
 }
