--- a/golang/monitoring/monitoring_server/config.json
+++ b/golang/monitoring/monitoring_server/config.json
@@ -1,26 +1,30 @@
 {
-  "Id": "82c3772e-33e4-4cab-88e6-dd47a81f380e",
-  "Name": "monitoring.MonitoringService",
-  "Path": "/home/dave/go/src/github.com/globulario/services/golang/monitoring/monitoring_server/monitoring_server",
-  "Proto": "/home/dave/go/src/github.com/globulario/services/proto/monitoring.proto",
-  "Port": 10019,
-  "Proxy": 10020,
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "Protocol": "grpc",
-  "Domain": "localhost",
-  "Description": "",
-  "Keywords": [],
-  "Repositories": [],
-  "Discoveries": [],
-  "CertFile": "",
-  "KeyFile": "",
   "CertAuthorityTrust": "",
+  "CertFile": "",
+  "Connections": {},
+  "Description": "",
+  "Discoveries": [],
+  "Domain": "localhost",
+  "Id": "82c3772e-33e4-4cab-88e6-dd47a81f380e",
+  "KeepAlive": false,
+  "KeepUpToDate": false,
+  "KeyFile": "",
+  "Keywords": [],
+  "Name": "monitoring.MonitoringService",
+  "Path": "/home/dave/go/src/github.com/globulario/services/golang/monitoring/monitoring_server/monitoring_server",
+  "Permissions": [],
+  "Port": 10019,
+  "Process": -1,
+  "Proto": "/home/dave/go/src/github.com/globulario/services/proto/monitoring.proto",
+  "Protocol": "grpc",
+  "Proxy": 10015,
+  "ProxyProcess": -1,
+  "PublisherId": "globulario",
+  "Repositories": [],
+  "State": "stopped",
   "TLS": false,
   "Version": "0.0.1",
-  "PublisherId": "globulario",
-  "KeepUpToDate": false,
-  "KeepAlive": false,
-  "Permissions": [],
-  "Connections": {}
+  "configPath": "/home/dave/go/src/github.com/globulario/services/golang/monitoring/monitoring_server/config.json"
 }
