--- a/golang/persistence/persistence_server/config.json
+++ b/golang/persistence/persistence_server/config.json
@@ -1,26 +1,30 @@
 {
-  "Id": "c610b18c-6d26-4d41-8be4-e9c816d3ed45",
-  "Name": "persistence.PersistenceService",
-  "Path": "/home/dave/go/src/github.com/globulario/services/golang/persistence/persistence_server/persistence_server",
-  "Port": 10035,
-  "Proto": "/home/dave/go/src/github.com/globulario/services/proto/persistence.proto",
-  "Proxy": 10036,
-  "Protocol": "grpc",
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "Domain": "localhost",
-  "Description": "",
-  "Keywords": [],
-  "Repositories": [],
-  "Discoveries": [],
   "CertAuthorityTrust": "",
   "CertFile": "",
+  "Connections": {},
+  "Description": "",
+  "Discoveries": [],
+  "Domain": "localhost",
+  "Id": "c610b18c-6d26-4d41-8be4-e9c816d3ed45",
+  "KeepAlive": false,
+  "KeepUpToDate": false,
   "KeyFile": "",
+  "Keywords": [],
+  "Name": "persistence.PersistenceService",
+  "Path": "/home/dave/go/src/github.com/globulario/services/golang/persistence/persistence_server/persistence_server",
+  "Permissions": [],
+  "Port": 10018,
+  "Process": -1,
+  "Proto": "/home/dave/go/src/github.com/globulario/services/proto/persistence.proto",
+  "Protocol": "grpc",
+  "Proxy": 10023,
+  "ProxyProcess": -1,
+  "PublisherId": "globulario",
+  "Repositories": [],
+  "State": "stopped",
   "TLS": false,
   "Version": "0.0.1",
-  "PublisherId": "globulario",
-  "KeepUpToDate": false,
-  "KeepAlive": false,
-  "Permissions": [],
-  "Connections": {}
+  "configPath": "/home/dave/go/src/github.com/globulario/services/golang/persistence/persistence_server/config.json"
 }
