--- a/golang/mail/mail_server/config.json
+++ b/golang/mail/mail_server/config.json
@@ -3,15 +3,7 @@
   "AllowedOrigins": "",
   "CertAuthorityTrust": "",
   "CertFile": "",
-  "Connections": {
-    "safran_Mail": {
-      "Host": "mon-print-p01",
-      "Id": "safran_Mail",
-      "Password": "Dowty123",
-      "Port": 25,
-      "User": "mrmfct037@UD6.UF6"
-    }
-  },
+  "Connections": {},
   "DbIpV4": "0.0.0.0:27017",
   "Description": "",
   "Discoveries": [],
@@ -19,28 +11,28 @@
   "IMAPS_Port": 993,
   "IMAP_ALT_Port": 1043,
   "IMAP_Port": 143,
-  "Id": "87f1acd6-db92-4024-a2a3-249e5c5e7d5c",
+  "Id": "14a4dc8b-15fa-4be2-bab1-d79abcef8345",
   "KeepAlive": false,
   "KeepUpToDate": false,
   "KeyFile": "",
   "Keywords": [],
   "Name": "mail.MailService",
   "Password": "adminadmin",
-  "Path": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/mail/mail_server/mail_server.exe",
+  "Path": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/mail/mail_server/mail_server",
   "Permissions": [],
-  "Port": 10014,
-  "Process": 4080,
-  "Proto": "C:/Users/mm006819/go/src/github.com/globulario/services/proto/mail.proto",
+  "Port": 10034,
+  "Process": -1,
+  "Proto": "/home/dave/Documents/Project/src/github.com/globulario/services/proto/mail.proto",
   "Protocol": "grpc",
-  "Proxy": 10015,
-  "ProxyProcess": 1768,
+  "Proxy": 10037,
+  "ProxyProcess": -1,
   "PublisherId": "globulario",
   "Repositories": [],
   "SMTPS_Port": 465,
   "SMTP_ALT_Port": 587,
   "SMTP_Port": 25,
-  "State": "running",
+  "State": "stopped",
   "TLS": false,
   "Version": "0.0.1",
-  "configPath": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/mail/mail_server/config.json"
+  "configPath": "/home/dave/Documents/Project/src/github.com/globulario/services/golang/mail/mail_server/config.json"
 }
