--- a/golang/sql/sql_server/config.json
+++ b/golang/sql/sql_server/config.json
@@ -47,7 +47,7 @@
     "operation": {
       "Charset": "utf8",
       "Driver": "odbc",
-      "Host": "mon-sql-v02",
+      "Host": "mon-sql-d01",
       "Id": "operation",
       "Name": "Operation",
       "Password": "hyn4AdgL3xJajG4Z",
@@ -66,12 +66,12 @@
   "Name": "sql.SqlService",
   "Path": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/sql/sql_server/sql_server.exe",
   "Permissions": [],
-  "Port": 10027,
-  "Process": 14476,
+  "Port": 10030,
+  "Process": 21484,
   "Proto": "C:/Users/mm006819/go/src/github.com/globulario/services/proto/sql.proto",
   "Protocol": "grpc",
-  "Proxy": 10026,
-  "ProxyProcess": 9372,
+  "Proxy": 10022,
+  "ProxyProcess": 15660,
   "PublisherId": "globulario",
   "Repositories": [],
   "State": "running",
