update the service with the new permissions system and stream tranfert function.

--- a/golang/persistence/persistence_server/config.json
+++ b/golang/persistence/persistence_server/config.json
@@ -7,24 +7,24 @@
   "Description": "",
   "Discoveries": [],
   "Domain": "localhost",
-  "Id": "ad7011df-8730-4efe-9634-88b6584fac93",
+  "Id": "13fe664e-a64c-4465-8977-22fb7a22dec6",
   "KeepAlive": false,
   "KeepUpToDate": false,
   "KeyFile": "",
   "Keywords": [],
   "Name": "persistence.PersistenceService",
-  "Path": "/home/dave/go/src/github.com/globulario/services/golang/persistence/persistence_server/persistence_server",
+  "Path": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/persistence/persistence_server/persistence_server.exe",
   "Permissions": [],
-  "Port": 10025,
-  "Process": -1,
-  "Proto": "/home/dave/go/src/github.com/globulario/services/proto/persistence.proto",
+  "Port": 10017,
+  "Process": 17008,
+  "Proto": "C:/Users/mm006819/go/src/github.com/globulario/services/proto/persistence.proto",
   "Protocol": "grpc",
   "Proxy": 10026,
-  "ProxyProcess": -1,
+  "ProxyProcess": 20892,
   "PublisherId": "globulario",
   "Repositories": [],
-  "State": "stopped",
+  "State": "running",
   "TLS": false,
   "Version": "0.0.1",
-  "configPath": "/home/dave/go/src/github.com/globulario/services/golang/persistence/persistence_server/config.json"
+  "configPath": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/persistence/persistence_server/config.json"
 }
