--- a/golang/event/event_server/config.json
+++ b/golang/event/event_server/config.json
@@ -6,24 +6,24 @@
   "Description": "",
   "Discoveries": [],
   "Domain": "localhost",
-  "Id": "e208ca54-031d-48cd-8a97-83cd0a8e0016",
+  "Id": "6d540754-11bf-45e0-aaf5-d72da845ff71",
   "KeepAlive": false,
   "KeepUpToDate": false,
   "KeyFile": "",
   "Keywords": [],
   "Name": "event.EventService",
-  "Path": "/home/dave/go/src/github.com/globulario/services/golang/event/event_server/event_server",
+  "Path": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/event/event_server/event_server.exe",
   "Permissions": [],
-  "Port": 10023,
-  "Process": -1,
-  "Proto": "/home/dave/go/src/github.com/globulario/services/proto/event.proto",
+  "Port": 10016,
+  "Process": 23648,
+  "Proto": "C:/Users/mm006819/go/src/github.com/globulario/services/proto/event.proto",
   "Protocol": "grpc",
-  "Proxy": 10021,
-  "ProxyProcess": -1,
+  "Proxy": 10018,
+  "ProxyProcess": 21208,
   "PublisherId": "globulario",
   "Repositories": [],
-  "State": "stopped",
+  "State": "running",
   "TLS": false,
   "Version": "0.0.1",
-  "configPath": "/home/dave/go/src/github.com/globulario/services/golang/event/event_server/config.json"
+  "configPath": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/event/event_server/config.json"
 }
