--- a/golang/monitoring/monitoring_server/config.json
+++ b/golang/monitoring/monitoring_server/config.json
@@ -3,35 +3,28 @@
   "AllowedOrigins": "",
   "CertAuthorityTrust": "",
   "CertFile": "",
-  "Connections": {
-    "dashboard_connection": {
-      "Host": "localhost",
-      "Id": "dashboard_connection",
-      "Port": 9090,
-      "Type": 0
-    }
-  },
+  "Connections": {},
   "Description": "",
   "Discoveries": [],
   "Domain": "localhost",
-  "Id": "b77c9172-71d4-414c-a195-11e83c98b44a",
+  "Id": "d479c74d-625f-47d7-8f28-95139ca7b4b4",
   "KeepAlive": false,
   "KeepUpToDate": false,
   "KeyFile": "",
   "Keywords": [],
   "Name": "monitoring.MonitoringService",
-  "Path": "/home/dave/go/src/github.com/globulario/services/golang/monitoring/monitoring_server/monitoring_server",
+  "Path": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/monitoring/monitoring_server/monitoring_server.exe",
   "Permissions": [],
-  "Port": 10017,
-  "Process": -1,
-  "Proto": "/home/dave/go/src/github.com/globulario/services/proto/monitoring.proto",
+  "Port": 10031,
+  "Process": 5316,
+  "Proto": "C:/Users/mm006819/go/src/github.com/globulario/services/proto/monitoring.proto",
   "Protocol": "grpc",
-  "Proxy": 10013,
-  "ProxyProcess": -1,
+  "Proxy": 10028,
+  "ProxyProcess": 20508,
   "PublisherId": "globulario",
   "Repositories": [],
-  "State": "stopped",
+  "State": "running",
   "TLS": false,
   "Version": "0.0.1",
-  "configPath": "/home/dave/go/src/github.com/globulario/services/golang/monitoring/monitoring_server/config.json"
+  "configPath": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/monitoring/monitoring_server/config.json"
 }
