--- a/golang/storage/storage_server/config.json
+++ b/golang/storage/storage_server/config.json
@@ -7,24 +7,24 @@
   "Description": "",
   "Discoveries": [],
   "Domain": "localhost",
-  "Id": "0ee30261-6239-495c-bfc4-e1b5fd3a0988",
+  "Id": "cbb9debc-832b-4a97-a1e8-35ebd0bd3790",
   "KeepAlive": false,
   "KeepUpToDate": false,
   "KeyFile": "",
   "Keywords": [],
   "Name": "storage.StorageService",
-  "Path": "/home/dave/go/src/github.com/globulario/services/golang/storage/storage_server/storage_server",
+  "Path": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/storage/storage_server/storage_server.exe",
   "Permissions": null,
-  "Port": 10014,
-  "Process": -1,
-  "Proto": "/home/dave/go/src/github.com/globulario/services/proto/storage.proto",
+  "Port": 10027,
+  "Process": 15944,
+  "Proto": "C:/Users/mm006819/go/src/github.com/globulario/services/proto/storage.proto",
   "Protocol": "grpc",
-  "Proxy": 10028,
-  "ProxyProcess": -1,
+  "Proxy": 10025,
+  "ProxyProcess": 16024,
   "PublisherId": "globulario",
   "Repositories": [],
-  "State": "stopped",
+  "State": "running",
   "TLS": false,
   "Version": "0.0.1",
-  "configPath": "/home/dave/go/src/github.com/globulario/services/golang/storage/storage_server/config.json"
+  "configPath": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/storage/storage_server/config.json"
 }
